Fixed Front Page

--- a/Python Project/index.html
+++ b/Python Project/index.html
@@ -26,11 +26,11 @@
         <a class="navbar-brand" href="index.html">The Looking Glass</a>
         <div class="topnav">
           <div class="search-container">
-              <input type="text" placeholder="Search.." name="search">
+              <input type="text" placeholder="Search..." name="search">
               <button type="submit"><i class="fa fa-search"></i></button>
           </div>
-          <a class="active" href="placeholder">Signup</a>
-          <a href="placeholder">Login</a>
+          <a class="active" href="placeholder">Signup/Login</a>
+
 
         </div>
       </div>
@@ -48,7 +48,7 @@
           <div class="carousel-item active">
             <img src="PICTURES/index-1.jpg" alt="image">
             <div class="carousel-caption d-none d-md-block">
-            
+
 
             </div>
           </div>
