updated the signin/login as well as the upload html files

--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -105,7 +105,7 @@
                           <p class="card-text">Share your unique photographs with the Looking Glass community.</p>
                         </div>
                         <div class="card-footer text-center">
-                          <a href="#" class="btn btn-primary">Upload</a>
+                          <a href="http://localhost:5000/upload" class="btn btn-primary">Upload</a>
                         </div>
                       </div>
                     </div>
