--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand" href="index.html">The Looking Glass</a>
         <div class="topnav">
 
-        <a class="active" href="placeholder">Signup/Login</a>
+        <a class="active" href="/signin">Signup/Login</a>
 
 
         </div>
