--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -24,7 +24,7 @@
                left: 0;
                bottom: 0;
                width: 100%;
-               background-color:gray;
+               background-color:rgb(29,29,29);
                color:white;
                text-align: center;
                
