Updated the membership levels/mission statement
Membership levels now reflect the free/contributor status, and the mission statement now links to the mission statement page.

--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -89,10 +89,10 @@
           <div class="card h-100">
             <h4 class="card-header">Our Mission</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">See what our company is all about and how it can help you!</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="MissionStatement.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -100,10 +100,15 @@
           <div class="card h-100">
             <h4 class="card-header">Membership Levels</h4>
             <div class="card-body">
-              <p class="card-text">Click below to learn about our different membership opportunities</p>
+              <p class="card-text">
+		Once you create an account, you can download up to ten pictures for free.
+                Once you upload a picture, your account will be upgraded to a "contributor".
+                Contributors are able to download as many photos as they'd like, as well as 
+                having access to their own personal page to store their photos. 
+	      </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              
             </div>
           </div>
         </div>
