--- a/Project_Files/static/Private.html
+++ b/Project_Files/static/Private.html
@@ -52,81 +52,63 @@
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <h3>Your Private Photos</h3>
         </li>
-        <li class="breadcrumb-item active">Portfolio Item</li>
-      </ol>
 
-      <!-- Portfolio Item Row -->
-      <div class="row">
-
-        <div class="col-md-8">
-          <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        <div class="gallery">
+          <figure>
+            <img src="static/PICTURES/index-4.jpg" alt="" />
+            <figcaption>Daytona Beach <small>United States</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-5.jpg" alt="" />
+            <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-6.jpg" alt="" />
+            <figcaption>
+              Bad Pyrmont <small>Deutschland</small>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-7.jpg" alt="" />
+            <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-8.jpg" alt="" />
+            <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-9.jpg" alt="" />
+            <figcaption>Highlands <small>United States</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-4.jpg" alt="" />
+            <figcaption>Daytona Beach <small>United States</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-5.jpg" alt="" />
+            <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-6.jpg" alt="" />
+            <figcaption>
+              Bad Pyrmont <small>Deutschland</small>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-7.jpg" alt="" />
+            <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-8.jpg" alt="" />
+            <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+          </figure>
+          <figure>
+            <img src="static/PICTURES/index-9.jpg" alt="" />
+            <figcaption>Highlands <small>United States</small></figcaption>
+          </figure>
         </div>
-
-        <div class="col-md-4">
-          <h3 class="my-3">Rating</h3>
-        <div class="row">
-    <div class="col-lg-12">
-      <div class="star-rating">
-        <span class="fa fa-star-o" data-rating="1"></span>
-        <span class="fa fa-star-o" data-rating="2"></span>
-        <span class="fa fa-star-o" data-rating="3"></span>
-        <span class="fa fa-star-o" data-rating="4"></span>
-        <span class="fa fa-star-o" data-rating="5"></span>
-        <input type="hidden" name="whatever1" class="rating-value" value="2.56">
-      </div>
-    </div>
-  </div>
-
-  <h3 class="my-3">Message The Publisher</h3>
-  <div class="col-md-6">
-      						<div class="widget-area no-padding blank">
-  								<div class="status-upload">
-  									<form>
-  										<textarea placeholder="What do you think?" ></textarea>
-  										<button type="submit" class="btn btn-success green"><i class="fa fa-send"></i> Send</button>
-  									</form>
-  								</div><!-- Status Upload  -->
-  							</div><!-- Widget Area -->
-  						</div>
-
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-      <!-- Related Projects Row -->
-      <h3 class="my-4">Related Pictures</h3>
-
-      <div class="row">
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-      </div>
-      <!-- /.row -->
 
     </div>
     <!-- /.container -->
