--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -27,7 +27,8 @@
         <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
         <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
 
-        <a class="navbar-left" href="/signin">Signup/Login</a>
+      <a class="navbar-left" href="/signup">Signup</a>
+      <a class="navbar-left" href="/login">Login</a>
 
 
         </div>
@@ -108,7 +109,7 @@
 	             </p>
             </div>
             <div class="card-footer">
-              <a href="Sign-Up link here" class="btn btn-primary">Sign-Up</a>
+              <a href="/signup" class="btn btn-primary">Sign-Up</a>
             </div>
           </div>
         </div>
