--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -24,14 +24,15 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">The Looking Glass</a>
-        <div class="topnav">
+        <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
+        <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
 
-        <a class="active" href="/signin">Signup/Login</a>
+      <a class="navbar-left" href="/signup">Signup</a>
+      <a class="navbar-left" href="/login">Login</a>
 
 
         </div>
-      </div>
+
     </nav>
 
     <header>
@@ -89,10 +90,10 @@
           <div class="card h-100">
             <h4 class="card-header">Our Mission</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">See what our company is all about and how it can help you!</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="MissionStatement.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -100,10 +101,15 @@
           <div class="card h-100">
             <h4 class="card-header">Membership Levels</h4>
             <div class="card-body">
-              <p class="card-text">Click below to learn about our different membership opportunities</p>
+              <p id="p01" class="card-text">
+		Once you create an account, you can download up to ten pictures for free.
+                Once you upload a picture, your account will be upgraded to a "contributor".
+                Contributors are able to download as many photos as they'd like, as well as
+                having access to their own personal page to store their photos.
+	             </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="/signup" class="btn btn-primary">Sign-Up</a>
             </div>
           </div>
         </div>
@@ -122,39 +128,39 @@
       <!-- /.row -->
 
 
-      <!-- Features Section -->
-      <div class="row">
-        <div class="col-lg-6">
-          <h2>Modern Business Features</h2>
-          <p>The Modern Business template by Start Bootstrap includes:</p>
-          <ul>
-            <li>
-              <strong>Bootstrap v4</strong>
-            </li>
-            <li>jQuery</li>
-            <li>Font Awesome</li>
-            <li>Working contact form with validation</li>
-            <li>Unstyled page elements for easy customization</li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-        </div>
-        <div class="col-lg-6">
-          <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
-        </div>
+      <div class="gallery">
+        <figure>
+          <img src="static/PICTURES/index-4.jpg" alt="" />
+          <figcaption>Daytona Beach <small>United States</small></figcaption>
+        </figure>
+        <figure>
+          <img src="static/PICTURES/index-5.jpg" alt="" />
+          <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+        </figure>
+        <figure>
+          <img src="static/PICTURES/index-6.jpg" alt="" />
+          <figcaption>
+            Bad Pyrmont <small>Deutschland</small>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="static/PICTURES/index-7.jpg" alt="" />
+          <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
+        </figure>
+        <figure>
+          <img src="static/PICTURES/index-8.jpg" alt="" />
+          <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+        </figure>
+        <figure>
+          <img src="static/PICTURES/index-9.jpg" alt="" />
+          <figcaption>Highlands <small>United States</small></figcaption>
+        </figure>
+
       </div>
       <!-- /.row -->
 
       <hr>
 
-      <!-- Call to Action Section -->
-      <div class="row mb-4">
-        <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-        </div>
-        <div class="col-md-4">
-          <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
-        </div>
-      </div>
 
     </div>
     <!-- /.container -->
