--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -83,7 +83,7 @@
                         </div>
                 </div>
              </div>
-<div class="container">
+             <div class="container">
             <h1 class="text-center"> Welcome to The Looking Glass! </h1>
 
 
@@ -119,17 +119,26 @@
                           <p class="card-text">See what photos people are ranting and raving about!</p>
                         </div>
                         <div class="card-footer">
-                          <a href="#" class="btn btn-primary">View Photos</a>
+                          <a href="http://localhost:5000/popular" class="btn btn-primary">View Photos</a>
                         </div>
                       </div>
                     </div>
                 </div>
+                <p>            </p>
+                <p>           </p>
+                <p>            </p>
+              </div>
+                <footer class="py-5 bg-dark">
+                  <div class="container">
+                    <p class="m-0 text-center text-white">Copyright &copy; The Looking Glass 2018</p>
+                  </div>
+                  <!-- /.container -->
+                </footer>
 
+                <!-- Bootstrap core JavaScript -->
                 <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
                 <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-        </body>
 
-        <div class="footer">
-            <p>Copyright &copy; The Looking Glass</p>
-        </div>
-</html>
+              </body>
+
+            </html>
