--- a/Project_Files/static/MissionStatement.html
+++ b/Project_Files/static/MissionStatement.html
@@ -1,80 +1,95 @@
-<!DOCTYPE>
-<html lang = "en">
-    <head>
-        <meta charset="utsf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name= "viewport" content="width=device-width, initial scale = 1">
-        <title>Mission Statement</title> 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
 
-        <style>
-            .container img{
-                height: 500px;
-                width: 700px;
-            }
-            .footer{
-               position: fixed;
-               left: 0;
-               bottom: 0;
-               width: 100%;
-               background-color:rgb(29, 29, 29);
-               color:white;
-               text-align: center;
-           }
-           #mission{
-               font-family: 'Times New Roman', Times, serif;
-               font-size: 20;
-               padding-left: 20px;
-           }
-           #mission-header{
-               font-family: 'Times New Roman', Times, serif;
-               font-size: 50;
-               text-decoration: underline;
-           }
-        </style>
+  <head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>The Looking Glass</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+
+
+
     </head>
 
     <body>
-            <nav class="navbar navbar-inverse">
-                    <div class="container-fluid">
-                      <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">The Looking Glass</a>
-                      </div>
-                      <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        
-                     </ul>
-                      <ul class="nav navbar-nav navbar-right">
-                           <li class="active"> <a href="#">Signup/Login</a> </li> 
-                      </ul>
-                    </div>
-            </nav>     
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+          <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
+          <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
 
-                  <div class="row">
-                        <div class="col-lg-6">
-                          <h2 class="text-center" id="mission-header"><strong>Our Mission</strong></h2>
-                          <br>
-                          <br>
-                          <p id="mission">
-                            The Looking Glass is a user-driven, open-source community that allows people from all over the world to share their unique 
-                            photographs with one another. From professional photographers to amateurs to people who just believe they’ve taken a good picture, 
-                            The Looking Glass is open to anyone who wants to share their work with the world!
-                          </p>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="container">
-                                 <img class="img-fluid rounded" src="Logo.png" alt="">
-                            </div>
-                        </div>
-                      </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    </body>
+          <a class="navbar-left" href="/signin">Signup/Login</a>
 
-    <div class="footer">
-        <p>Copyright &copy; The Looking Glass</p>
-    </div>
 
- </html>
+          </div>
 
+      </nav>
+      <div class="row">
+        <div id="missionpic"class="col-lg-6">
+          <img class="img-fluid rounded mb-4" src="/static/PICTURES/mission.jpeg" alt="">
+        </div>
+
+        <div class="col-lg-6">
+          <h2 class="text-center" id="mission-header"><strong>Our Mission</strong></h2>
+          <p id="mission">The Looking Glass is a user-driven, open-source community that allows people from all over the world to share their unique
+          photographs with one another. From professional photographers to amateurs to people who just believe they’ve taken a good picture,
+          The Looking Glass is open to anyone who wants to share their work with the world!</p>
+
+          <p >Our mission is simple: Connect people who connect with
+          art. A picture is worth a thousand words, so we like to think our website is more of a dictionary. So Join, Contribute, and Download! We are
+          excited for you to experience a new world through our Looking Glass.</p>
+        </div>
+
+</div>
+
+<div class="gallery">
+  <figure>
+    <img src="static/PICTURES/index-4.jpg" alt="" />
+    <figcaption>Daytona Beach <small>United States</small></figcaption>
+  </figure>
+  <figure>
+    <img src="static/PICTURES/index-5.jpg" alt="" />
+    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+  </figure>
+  <figure>
+    <img src="static/PICTURES/index-6.jpg" alt="" />
+    <figcaption>
+      Bad Pyrmont <small>Deutschland</small>
+    </figcaption>
+  </figure>
+  <figure>
+    <img src="static/PICTURES/index-7.jpg" alt="" />
+    <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
+  </figure>
+  <figure>
+    <img src="static/PICTURES/index-8.jpg" alt="" />
+    <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+  </figure>
+  <figure>
+    <img src="static/PICTURES/index-9.jpg" alt="" />
+    <figcaption>Highlands <small>United States</small></figcaption>
+  </figure>
+
+</div>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; The Looking Glass 2018</p>
+  </div>
+  <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+
+</body>
+
+</html>
